k8s/pomerium-enterprise/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pomerium-console
spec:
  template:
    spec:
      containers:
        - name: pomerium-console
