k8s/pomerium-enterprise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pomerium-console
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "console.pomerium.dev"
    # the below two annotations are required
    ingress.pomerium.io/pass_identity_headers: "true"
    ingress.pomerium.io/allow_any_authenticated_user: "true"
    ingress.pomerium.io/secure_upstream: 'true'
spec:
  ingressClassName: pomerium
  tls:
    - secretName: pomerium-dev
      hosts:
        - console.pomerium.dev
  rules:
    - host: "console.pomerium.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pomerium-console
                port:
                  name: app
